--- a/information_non-plot.tex
+++ b/information_non-plot.tex
@@ -68,7 +68,7 @@
 \maketitle
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.1242749 0.1488013 0.1498663
 ## 120  0.1247004 0.1471305 0.1478268
 ## 480  0.1230561 0.1451366 0.1456079
@@ -77,7 +77,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.1150858 0.1397955 0.1409082
 ## 120  0.1142728 0.1384532 0.1396315
 ## 480  0.1134765 0.1346065 0.1354029
@@ -88,7 +88,7 @@
 \includegraphics{information_non-plot_files/figure-latex/AR(1)ppl-1.pdf}
 
 \begin{verbatim}
-##          DGP      DJ      CF
+##          DGP      DJ    IMEO
 ## 40   0.56860 0.56280 0.56985
 ## 120  0.55975 0.55780 0.56745
 ## 480  0.56620 0.56440 0.57370
@@ -97,7 +97,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.4952841 0.4960529 0.4951093
 ## 120  0.4964295 0.4966603 0.4954420
 ## 480  0.4956106 0.4958477 0.4945508
@@ -108,7 +108,7 @@
 \includegraphics{information_non-plot_files/figure-latex/AR(1)sl-1.pdf}
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.1242749 0.1400752 0.1353090
 ## 120  0.1247004 0.1290248 0.1288656
 ## 480  0.1230561 0.1234761 0.1256677
@@ -117,7 +117,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.1150858 0.1238992 0.1238084
 ## 120  0.1142728 0.1149456 0.1184363
 ## 480  0.1134765 0.1125678 0.1157249
@@ -128,7 +128,7 @@
 \includegraphics{information_non-plot_files/figure-latex/SAR(3)(1)_4ppl-1.pdf}
 
 \begin{verbatim}
-##          DGP      DJ      CF
+##          DGP      DJ    IMEO
 ## 40   0.56860 0.51715 0.56275
 ## 120  0.55975 0.54105 0.56550
 ## 480  0.56620 0.55680 0.57085
@@ -137,7 +137,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.4952841 0.4997183 0.4960592
 ## 120  0.4964295 0.4983245 0.4957036
 ## 480  0.4956106 0.4967757 0.4949672
