--- a/information-plot.tex
+++ b/information-plot.tex
@@ -68,7 +68,7 @@
 \maketitle
 
 \begin{verbatim}
-##             DGP         DJ         CF
+##             DGP         DJ       IMEO
 ## 40   0.05145198 0.06136275 0.06235321
 ## 120  0.05161973 0.06042160 0.06108224
 ## 480  0.05114581 0.05958339 0.06019062
@@ -77,7 +77,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##             DGP         DJ         CF
+##             DGP         DJ       IMEO
 ## 40   0.05304658 0.06612571 0.06766372
 ## 120  0.05227776 0.06456819 0.06603677
 ## 480  0.05183663 0.06154719 0.06320018
@@ -88,7 +88,7 @@
 \includegraphics{information-plot_files/figure-latex/AR(1)ppl-1.pdf}
 
 \begin{verbatim}
-##          DGP      DJ      CF
+##          DGP      DJ    IMEO
 ## 40   0.30185 0.32140 0.32105
 ## 120  0.30340 0.30790 0.30985
 ## 480  0.30255 0.30325 0.30800
@@ -97,7 +97,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.4590720 0.4670256 0.4668916
 ## 120  0.4597380 0.4616365 0.4624432
 ## 480  0.4593735 0.4596738 0.4616781
@@ -108,7 +108,7 @@
 \includegraphics{information-plot_files/figure-latex/AR(1)sl-1.pdf}
 
 \begin{verbatim}
-##             DGP         DJ         CF
+##             DGP         DJ       IMEO
 ## 40   0.05145198 0.05707540 0.05719257
 ## 120  0.05161973 0.05285873 0.05393495
 ## 480  0.05114581 0.05124885 0.05243839
@@ -117,7 +117,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##             DGP         DJ         CF
+##             DGP         DJ       IMEO
 ## 40   0.05304658 0.05393346 0.05966508
 ## 120  0.05227776 0.04951268 0.05589509
 ## 480  0.05183663 0.05039968 0.05391160
@@ -128,7 +128,7 @@
 \includegraphics{information-plot_files/figure-latex/SAR(3)(1)_4ppl-1.pdf}
 
 \begin{verbatim}
-##          DGP      DJ      CF
+##          DGP      DJ    IMEO
 ## 40   0.30185 0.27840 0.32515
 ## 120  0.30340 0.28245 0.31330
 ## 480  0.30255 0.29320 0.30770
@@ -137,7 +137,7 @@
 \end{verbatim}
 
 \begin{verbatim}
-##            DGP        DJ        CF
+##            DGP        DJ      IMEO
 ## 40   0.4590720 0.4482226 0.4684426
 ## 120  0.4597380 0.4502023 0.4638468
 ## 480  0.4593735 0.4552407 0.4615532
