--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -41,10 +41,10 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(mar=c(par('mar')[1:3], 0)) 
 plot.new()
-l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","PM"),plot=FALSE, pch=1:4,col=1:4)
+l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","IMEO"),plot=FALSE, pch=1:4,col=1:4)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
@@ -52,7 +52,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
 axis(1, at=1:5, labels=x_axis)
 axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 
 ```
 
@@ -72,10 +72,10 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(mar=c(par('mar')[1:3], 0)) 
 plot.new()
-l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","PM"),plot=FALSE, pch=1:4,col=1:4)
+l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","IMEO"),plot=FALSE, pch=1:4,col=1:4)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
@@ -83,7 +83,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
 axis(1, at=1:5, labels=x_axis)
 axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 
 ```
 
@@ -103,10 +103,10 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(mar=c(par('mar')[1:3], 0)) 
 plot.new()
-l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","PM"),plot=FALSE, pch=1:4,col=1:4)
+l <- legend(0, 0, bty='n',c("DGP", "DJ","QR","IMEO"),plot=FALSE, pch=1:4,col=1:4)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
@@ -114,7 +114,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = "n"
 axis(1, at=1:5, labels=x_axis)
 axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 
 ```
 
@@ -209,13 +209,13 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
         ,ylab = 'service level')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 
 y_40<-c(Reduce("+",re_40_p_l[[5]])[3]/iter,Reduce("+",re_40_p_l[[6]])[3]/iter
         ,Reduce("+",re_40_p_l[[7]])[3]/iter,Reduce("+",re_40_p_l[[8]])[3]/iter)
@@ -231,13 +231,13 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
         ,ylab = 'service level')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 
 y_40<-c(Reduce("+",re_40_p_l[[9]])[3]/iter,Reduce("+",re_40_p_l[[10]])[3]/iter
         ,Reduce("+",re_40_p_l[[11]])[3]/iter,Reduce("+",re_40_p_l[[12]])[3]/iter)
@@ -253,14 +253,14 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
         ,ylab = 'service level')
 abline(h=0.3,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 ```
 ```{r fr}
 x_axis<-c(40,120,480,1200,4800)
@@ -278,7 +278,7 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(omd=c(0, 1-w, 0, 1))
 par(mgp = c(3.3, 1, 0))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n'
@@ -286,7 +286,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n'
 axis(1, at=1:5, labels=x_axis)
 axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 
 y_40<-c(Reduce("+",re_40_p_l[[5]])[4]/iter,Reduce("+",re_40_p_l[[6]])[4]/iter
         ,Reduce("+",re_40_p_l[[7]])[4]/iter,Reduce("+",re_40_p_l[[8]])[4]/iter)
@@ -302,7 +302,7 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(omd=c(0, 1-w, 0, 1))
 par(mgp = c(3.3, 1, 0))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n',xlab = 'data length'
@@ -310,7 +310,7 @@ matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n',xlab = 'data 
 axis(1, at=1:5, labels=x_axis)
 axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 
 y_40<-c(Reduce("+",re_40_p_l[[9]])[4]/iter,Reduce("+",re_40_p_l[[10]])[4]/iter
         ,Reduce("+",re_40_p_l[[11]])[4]/iter,Reduce("+",re_40_p_l[[12]])[4]/iter)
@@ -326,7 +326,7 @@ y_axis<-c(y_40,y_120,y_480,y_1200,y_4800)
 mac<-matrix(y_axis,nrow = 4,ncol = 5)
 mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
-colnames(mac)<-c("DGP", "DJ","QR","CF")
+colnames(mac)<-c("DGP", "DJ","QR","IMEO")
 par(omd=c(0, 1-w, 0, 1))
 par(mgp = c(3.3, 1, 0))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n',xlab = 'data length'
@@ -335,7 +335,7 @@ abline(h=0.3,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
 axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
+       ,c("DGP", "DJ","QR","IMEO"), pch=1:4,col=1:4)
 ```
 
 
