--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -405,9 +405,9 @@ df<-data.frame(c('40','120','480','1200','4800'),
                ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2)
                ,percent(dgp_f,accuracy = 0.1),percent(dj_f,accuracy = 0.1)
                ,percent(qr_f,accuracy = 0.1),percent(cf_f,accuracy = 0.1))
-colnames(df)<-c('Data size','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed'
-                ,'DGP','disjoint','quantile','proposed')
-kable(df,'latex', booktabs = T,caption = 'Size effect (q=30%)',align = 'c') %>% 
+colnames(df)<-c('Data size','DGP','DJ','QR','IMEO','DGP','DJ','QR','IMEO'
+                ,'DGP','DJ','QR','IMEO')
+kable(df,'latex', booktabs = T,align = 'c') %>% 
         add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4
                            , "Fill rate" = 4),bold = T) %>%
         kable_styling(latex_options = "scale_down")
@@ -444,38 +444,10 @@ df<-data.frame(c('0.5','0.63','0.3'),percent(dgp_p,accuracy = 0.1),percent(dj_p,
                ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2)
                ,percent(dgp_f,accuracy = 0.1),percent(dj_f,accuracy = 0.1)
                ,percent(qr_f,accuracy = 0.1),percent(cf_f,accuracy = 0.1))
-colnames(df)<-c('Target service level','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
+colnames(df)<-c('Target service level','DGP','DJ','QR','IMEO','DGP','DJ','QR','IMEO','DGP','DJ','QR','IMEO')
 kable(df,'latex', booktabs = T,align = 'c') %>% 
         add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4, "Fill rate" = 4),bold = T) %>%
-        kable_styling(latex_options = c("striped", "scale_down"))
-```
-
-
-```{r level480}
-dgp_p<-c(Reduce("+",re_480_p_l[[1]])[2]/iter,Reduce("+",re_480_p_l[[5]])[2]/iter
-         ,Reduce("+",re_480_p_l[[9]])[2]/iter)
-dj_p<-c(Reduce("+",re_480_p_l[[2]])[2]/iter,Reduce("+",re_480_p_l[[6]])[2]/iter
-         ,Reduce("+",re_480_p_l[[10]])[2]/iter)
-qr_p<-c(Reduce("+",re_480_p_l[[3]])[2]/iter,Reduce("+",re_480_p_l[[7]])[2]/iter
-         ,Reduce("+",re_480_p_l[[11]])[2]/iter)
-cf_p<-c(Reduce("+",re_480_p_l[[4]])[2]/iter,Reduce("+",re_480_p_l[[8]])[2]/iter
-         ,Reduce("+",re_480_p_l[[12]])[2]/iter)
-dgp_s<-c(Reduce("+",re_480_p_l[[1]])[3]/iter,Reduce("+",re_480_p_l[[5]])[3]/iter
-         ,Reduce("+",re_480_p_l[[9]])[3]/iter)
-dj_s<-c(Reduce("+",re_480_p_l[[2]])[3]/iter,Reduce("+",re_480_p_l[[6]])[3]/iter
-         ,Reduce("+",re_480_p_l[[10]])[3]/iter)
-qr_s<-c(Reduce("+",re_480_p_l[[3]])[3]/iter,Reduce("+",re_480_p_l[[7]])[3]/iter
-         ,Reduce("+",re_480_p_l[[11]])[3]/iter)
-cf_s<-c(Reduce("+",re_480_p_l[[4]])[3]/iter,Reduce("+",re_480_p_l[[8]])[3]/iter
-         ,Reduce("+",re_480_p_l[[12]])[3]/iter)
-df<-data.frame(c('0.5','0.63','0.3'),percent(dgp_p,accuracy = 0.1),percent(dj_p,accuracy = 0.1)
-               ,percent(qr_p,accuracy = 0.1),percent(cf_p,accuracy = 0.1)
-               ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2))
-
-colnames(df)<-c('Target service level','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
-kable(df,'latex', booktabs = T,caption = 'Target service level effect (n=480)',align = 'c') %>% 
-        add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4),bold = T) %>%
-        kable_styling(latex_options = c("striped", "scale_down"))
+        kable_styling(latex_options = c( "scale_down"))
 ```
 
 
@@ -509,8 +481,8 @@ df<-data.frame(c('0.5','0.63','0.3'),percent(dgp_p,accuracy = 0.1),percent(dj_p,
                ,round(dgp_s,2),round(dj_s,2),round(qr_s,2),round(cf_s,2)
                ,percent(dgp_f,accuracy = 0.1),percent(dj_f,accuracy = 0.1)
                ,percent(qr_f,accuracy = 0.1),percent(cf_f,accuracy = 0.1))
-colnames(df)<-c('Target service level','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed','DGP','disjoint','quantile','proposed')
+colnames(df)<-c('Target service level','DGP','DJ','QR','IMEO','DGP','DJ','QR','IMEO','DGP','DJ','QR','IMEO')
 kable(df,'latex', booktabs = T,align = 'c') %>% 
         add_header_above(c(" ", "Percentage profit loss" = 4, "Service level" = 4, "Fill rate" = 4),bold = T) %>%
-        kable_styling(latex_options = c("striped", "scale_down"))
+        kable_styling(latex_options = c( "scale_down"))
 ```
