--- a/main_file.tex
+++ b/main_file.tex
@@ -306,11 +306,11 @@ and $s=4800$, respectively. Generally speaking, the picture is similar, regardle
 \toprule
 \multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9} \cmidrule(l{3pt}r{3pt}){10-13}
-Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
+Target service level & DGP & DJ & QR & IMEO & DGP & DJ & QR & IMEO & DGP & DJ & QR & IMEO\\
 \midrule
-0.5 & 5.0\% & 5.4\% & 5.4\% & 5.3\% & 0.50 & 0.44 & 0.50 & 0.50 & 95.2\% & 93.5\% & 94.7\% & 94.8\%\\
-0.63 & 14.1\% & 15.2\% & 15.0\% & 14.8\% & 0.67 & 0.58 & 0.63 & 0.62 & 97.5\% & 95.8\% & 96.6\% & 96.6\%\\
-0.3 & 5.0\% & 5.6\% & 5.6\% & 5.5\% & 0.25 & 0.25 & 0.31 & 0.31 & 89.7\% & 88.2\% & 90.6\% & 90.8\%\\
+0.5 & 4.9\% & 5.4\% & 5.3\% & 5.3\% & 0.51 & 0.45 & 0.51 & 0.51 & 95.3\% & 93.4\% & 94.8\% & 94.8\%\\
+0.63 & 13.9\% & 15.2\% & 15.1\% & 14.9\% & 0.64 & 0.58 & 0.63 & 0.63 & 97.1\% & 95.9\% & 96.6\% & 96.6\%\\
+0.3 & 5.1\% & 5.6\% & 5.6\% & 5.6\% & 0.30 & 0.25 & 0.32 & 0.32 & 91.2\% & 88.4\% & 90.6\% & 90.8\%\\
 \bottomrule
 \end{tabular}}
 \end{table}
@@ -324,11 +324,11 @@ Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & q
 \toprule
 \multicolumn{1}{c}{\textbf{ }} & \multicolumn{4}{c}{\textbf{Percentage profit loss}} & \multicolumn{4}{c}{\textbf{Service level}} & \multicolumn{4}{c}{\textbf{Fill rate}} \\
 \cmidrule(l{3pt}r{3pt}){2-5} \cmidrule(l{3pt}r{3pt}){6-9} \cmidrule(l{3pt}r{3pt}){10-13}
-Target service level & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & proposed\\
+Target service level & DGP & DJ & QR & IMEO & DGP & DJ & QR & IMEO & DGP & DJ & QR & IMEO\\
 \midrule
-0.5 & 5.0\% & 5.0\% & 5.0\% & 5.0\% & 0.50 & 0.50 & 0.50 & 0.50 & 95.2\% & 95.2\% & 95.2\% & 95.2\%\\
-0.63 & 14.0\% & 14.0\% & 14.1\% & 14.1\% & 0.63 & 0.63 & 0.63 & 0.63 & 97.0\% & 96.9\% & 96.9\% & 96.9\%\\
-0.3 & 5.1\% & 5.1\% & 5.2\% & 5.2\% & 0.30 & 0.30 & 0.30 & 0.30 & 91.0\% & 90.9\% & 90.9\% & 91.0\%\\
+0.5 & 4.9\% & 5.0\% & 5.0\% & 5.0\% & 0.50 & 0.49 & 0.50 & 0.50 & 95.1\% & 95.1\% & 95.1\% & 95.1\%\\
+0.63 & 13.8\% & 13.8\% & 14.0\% & 14.0\% & 0.63 & 0.63 & 0.63 & 0.63 & 97.1\% & 97.0\% & 97.0\% & 97.0\%\\
+0.3 & 5.2\% & 5.2\% & 5.3\% & 5.3\% & 0.30 & 0.30 & 0.30 & 0.30 & 91.1\% & 91.1\% & 91.0\% & 91.1\%\\
 \bottomrule
 \end{tabular}}
 \end{table}
